# plant-disease-diagnosis

./: .pre-commit-config.yaml  pyproject.toml
