[tool.poetry]
name = "plant-disease-diagnosis"
version = "0.1.0"
description = "A deep learning model for automatic plant disease diagnosis"
authors = ["Alexey Savchuk <alexey.a.savchuk@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
